# convertly

./: .gitignore  README.md  files.py  main.py  pyproject.toml
.github/workflows/: converter-test.yml  release.yml
src/: converter.py  files.py  main.py  state.py
src/components/: DirectorySelector.py  FileSelector.py  FileTypeSelector.py  TitleBar.py  __init__.py
tests/: test_converter.py
